fixed spacing issue on mobile

--- a/src/components/CalendarEvent/CalendarEvent.css
+++ b/src/components/CalendarEvent/CalendarEvent.css
@@ -30,7 +30,8 @@
   
 @media only screen and (max-width: 700px) { /*mobile*/
     .event-box {
-        width: 100%;   
-        height: 180px;
+        width: 100%; 
+        height: 'auto';
+        min-height: 180px;  
     }
 }
